--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
   <header id="flex-header">
     <div class="cloud-header"></div>
-    <h1>Congratulations Teams!</h1>
+    <h1>Congratulations!</h1>
     <h2>You are currently running a Node.js app built for the IBM Cloud.</h2>
   </header>
   <main>
